web commit by http://svend.myopenid.com/: Trying a different escape.

--- a/doc/bugs/example_Mercurial_historyurl_doesn__39__t_show_file_history.mdwn
+++ b/doc/bugs/example_Mercurial_historyurl_doesn__39__t_show_file_history.mdwn
@@ -6,6 +6,6 @@ The current historyurl is:
 
 A link to the history page for the file would be:
 
-    #historyurl => "http://localhost:8000/log/tip/[[file]]", # hg serve'd local repository
+    #historyurl => "http://localhost:8000/log/tip/[\[file]]", # hg serve'd local repository
 
 This creates links to the hgweb page which is equivalent to the Git file history page.
