--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,10 @@ ikiwiki (2.13) UNRELEASED; urgency=low
     to let ikiwiki run setgid to that group.
   * ikiwiki-mass-rebuild: Run build with the user in all their groups.
   * Correct markdown in example index page in setup. Closes: #451469
+  * Better error message when a setup file has a syntax error.
+    Closes: #451666
 
- -- Joey Hess <joeyh@debian.org>  Fri, 16 Nov 2007 12:52:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 14:05:38 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
