* Fix mercurial historyurl in example setup file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,9 @@ ikiwiki (2.13) UNRELEASED; urgency=low
   * Correct markdown in example index page in setup. Closes: #451469
   * Better error message when a setup file has a syntax error.
     Closes: #451666
+  * Fix mercurial historyurl in example setup file.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 14:05:38 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 14:43:26 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
