--- a/doc/bugs/gitweb_deficiency_w.r.t._log_messages.mdwn
+++ b/doc/bugs/gitweb_deficiency_w.r.t._log_messages.mdwn
@@ -3,3 +3,8 @@ the one of the actual commit, but the one of some **previous** commit, in most
 cases of the one which was installed directly before the current commit.
 
 --[[tschwinge]]
+
+> Is there some way to make gitweb show a diff with the right message? 
+> I don't see one, except for diffs that show all changes in the commit,
+> rather than only changes to a single file. This feels like a bug in
+> gitweb. --[[Joey]]
