--- a/doc/bugs/gitweb_deficiency_w.r.t._newly_created_pages.mdwn
+++ b/doc/bugs/gitweb_deficiency_w.r.t._newly_created_pages.mdwn
@@ -4,3 +4,7 @@ Going from *RecentChanges*, when viewing the diffs of newly created pages
 -- in my opinion -- the diff for the newly added page be shown.
 
 --[[tschwinge]]
+
+> I don't see any way to make gitweb do that. You can click on the filename
+> after the "diff -cc" to see the whole file output, but gitweb won't show
+> a diff for a newly added file. --[[Joey]]
