* More compact output for the brokenlinks plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,9 @@ ikiwiki (2.13) UNRELEASED; urgency=low
   * Better error message when a setup file has a syntax error.
     Closes: #451666
   * Fix mercurial historyurl in example setup file.
+  * More compact output for the brokenlinks plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 14:43:26 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 15:59:54 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
