--- a/doc/todo/brokenlinks_should_group_links_to_a_page.mdwn
+++ b/doc/todo/brokenlinks_should_group_links_to_a_page.mdwn
@@ -17,3 +17,5 @@ target.
 > that the user both won't take much care which link is clicked on
 > to create it, and that both pages really meant to link to the same page
 > anyway. --[[Joey]]
+
+[[done]]
