* Allow trailing slashes after page names in wikilinks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,9 @@ ikiwiki (2.13) UNRELEASED; urgency=low
     Closes: #451666
   * Fix mercurial historyurl in example setup file.
   * More compact output for the brokenlinks plugin.
+  * Allow trailing slashes after page names in wikilinks.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 15:59:54 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 16:26:14 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
