--- a/doc/bugs/Trailing_slash_breaks_links.mdwn
+++ b/doc/bugs/Trailing_slash_breaks_links.mdwn
@@ -5,3 +5,5 @@ A trailing slash on a [[wikilink]] breaks the link:
 `\[[todo/Gallery]]` appears as [[todo/Gallery]].
 
 --[[JoshTriplett]]
+
+[[done]]
