--- a/doc/bugs/brokenlinks_false_positives.mdwn
+++ b/doc/bugs/brokenlinks_false_positives.mdwn
@@ -1,4 +1,4 @@
-The [[plugin/brokenlinks]] plugin falsely complains that
+The [[plugins/brokenlinks]] plugin falsely complains that
 [[helponformatting]] has a broken link to [[smileys]], if the smiley plgin
 is disabled. While the helponformatting page links to it inside a
 conditional, and so doesn't show the link in this case, ikiwiki scans for
