remove some links to nonexistent pages that we don't want to add

--- a/doc/bugs/404_when_cancel_create_page.mdwn
+++ b/doc/bugs/404_when_cancel_create_page.mdwn
@@ -1,6 +1,6 @@
 If you 
 
- * Add a link to a non-existant page and save. (e.g. [[somewhere-over-the-rainbow]])
+ * Add a link to a non-existant page and save. (e.g. somewhere-over-the-rainbow)
  * Click the question mark to create the page.
  * Click the cancel button.
 
