--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,13 @@ ikiwiki (2.13) UNRELEASED; urgency=low
   * Fix mercurial historyurl in example setup file.
   * More compact output for the brokenlinks plugin.
   * Allow trailing slashes after page names in wikilinks.
+  * Don't consider links to anchors on the same page to be self links.
+    Patch by Daniel Burrows. Closes: #451729
+  * When usedirs is disabled, link direct to index.html files, not to
+    directories, to improve browsing of file:// urls.
+    Patch by Daniel Burrows. Closes: #451728
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 16:26:14 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 19:56:46 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
