--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ ikiwiki (2.13) UNRELEASED; urgency=low
   * When usedirs is disabled, link direct to index.html files, not to
     directories, to improve browsing of file:// urls.
     Patch by Daniel Burrows. Closes: #451728
+  * Allow html5 video and audio tags and their attributes in the htmlscrubber.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 19:56:46 -0500
 
