web commit by http://hendry.iki.fi/: added blog

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -14,7 +14,7 @@ Projects
 * The [Relativistic Programming research wiki](http://wiki.cs.pdx.edu/rp).
 * [Debian-IN](http://debian-in.alioth.debian.org/)
 * [Braawi Ltd](http://braawi.com/) and the community site [Braawi.org](http://braawi.org/)
-* [Webconverger.org](http://webconverger.org/)
+* [Webconverger](http://webconverger.org/) (a Web only linux distribution) with a [blog](http://webconverger.org/blog/)
 * [debian-community.org](http://debian-community.org/)
 * The [cairo graphics library](http://cairographics.org/) website.
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
