--- a/doc/todo/improved_parentlinks_styling.mdwn
+++ b/doc/todo/improved_parentlinks_styling.mdwn
@@ -1,1 +1,7 @@
 Use a styled ul for the parentlinks.
+
+On second thought, I've decided not to. Doing that would make ikiwiki less
+usable in browsers like w3m that don't support styled uls. ikiwiki does use
+styled uls for other things, such as the action bar, but displaying that as
+a simple unstyled list in a simple browser works well and makes sense. For
+parent links, it does not. --[[Joey]]
