web commit by http://ptecza.myopenid.com/: * Ping

--- a/doc/blog/discussion.mdwn
+++ b/doc/blog/discussion.mdwn
@@ -33,3 +33,5 @@ are welcomed ;)
 What's your opinion, Joey? I hope it's also useful for another ikiwiki lovers :)
 
 --[[Paweł|ptecza]]
+
+>> Hello Joey! Is it a taboo subject? ;) --[[Paweł|ptecza]]
