--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ ikiwiki (2.13) UNRELEASED; urgency=low
     directories, to improve browsing of file:// urls.
     Patch by Daniel Burrows. Closes: #451728
   * Allow html5 video and audio tags and their attributes in the htmlscrubber.
+  * toc: Handle html elements embedded inside a header, rather than
+    stopping collecting the header text at the first element.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 19:56:46 -0500
 
