try adding a toc now that ikiwiki supports it

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -1,5 +1,7 @@
 This tutorial will walk you through setting up a wiki with ikiwiki.
 
+[[toc ]]
+
 ### 1. [[Download]] and [[install]] ikiwiki.
 
 ### 2. Decide where your wiki's files will go.
