--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.13) UNRELEASED; urgency=low
+ikiwiki (2.13) unstable; urgency=low
 
   The ikiwiki zombie army release.
 
@@ -27,7 +27,7 @@ ikiwiki (2.13) UNRELEASED; urgency=low
   * toc: Handle html elements embedded inside a header, rather than
     stopping collecting the header text at the first element.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 19:56:46 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 24 Nov 2007 16:06:22 -0500
 
 ikiwiki (2.12) unstable; urgency=low
 
