* Let CC be used to control what compiler is used to build wrappers. * Use 'cc' instead of gcc as the default compiler.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (2.14) UNRELEASED; urgency=low
+
+  * Let CC be used to control what compiler is used to build wrappers.
+  * Use 'cc' instead of gcc as the default compiler.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 25 Nov 2007 15:49:49 -0500
+
 ikiwiki (2.13) unstable; urgency=low
 
   The ikiwiki zombie army release.
