--- a/doc/todo/consistent_smileys.mdwn
+++ b/doc/todo/consistent_smileys.mdwn
@@ -1,1 +1,22 @@
 ikiwiki should have a consistent set of smileys.  We could fix the current smileys, or we could grab a new set of consistent smileys, such as the Tango emotes from gnome-icon-theme (GPL).
+
+> Tango doesn't have a smiley icon for :-/ I'd have to use the same icon as
+> for :-( . Also missing is :-P |-) and some of the less used ones. Some of
+> the non-face icons, like {*} and {o} also don't seem to be in there,
+> though we could keep the current ones.
+> 
+> gnome-icon-theme's emotes are not the tango ones. Tango is CC-BY-SA 2.5
+> (non-free IIRC), while gnome-icon-themes is GPL. If you compare icons,
+> such as the sunglasses one, they're different drawings, too. (I had been
+> very confused by these different licenses before..)
+> 
+> gnome-icon-theme does have an icon for :-P , though it's missing |-) and
+> some of the less used icons. Its :-( sucks, the mouth is barely visible
+> at all even at 32x32 size, and the frown is hard to make out. In general
+> the tango icons seem better drawn, though gnome-icon-themes has a better
+> B-).
+> 
+> Now that ikiwiki has multiple underlays, it would be possible to ship
+> multiple icon themes with ikiwiki, and have different versions of 
+> the [[smileys]] page to include only the smileys available for a given
+> theme. The underlay to use could be a configuation option. --[[Joey]]
