--- a/doc/news/ikiwiki_screencast.mdwn
+++ b/doc/news/ikiwiki_screencast.mdwn
@@ -1,5 +1,5 @@
 I've put together a short screencast that coovers approximatly the first
-half of the [[setup]] document, annd includes a demo of setting up a blog
+half of the [[setup]] document, and includes a demo of setting up a blog
 using ikiwiki.
 
 <http://kitenet.net/~joey/screencasts/ikiwiki_blog/>
