--- a/doc/news/ikiwiki_screencast.mdwn
+++ b/doc/news/ikiwiki_screencast.mdwn
@@ -1,4 +1,4 @@
-I've put together a short screencast that coovers approximatly the first
+I've put together a short screencast that covers approximatly the first
 half of the [[setup]] document, and includes a demo of setting up a blog
 using ikiwiki.
 
